--- a/style.css
+++ b/style.css
@@ -1,56 +1,48 @@
-/* div {
-    background-color: red;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+
+  
+  .para,
+  .small-para {
+    color: hsl(0, 0%, 0%);
+    font-weight: 800;
+  }
+.para {
+    font-size: 22px;
+    }  
+
+
+
+
+  
+  #confirm-button {
+    background: green;
     color: white;
-    font-size: 32px;
-    text-align: center;
     font-weight: bold;
   } 
   
-  This was for lesson 1.
-  */
-
-  .odd {
-    background-color: salmon;
-    font-family: Verdana, "DejaVu Sans", sans-serif;
+  .button {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font-size: 20px;
   }
 
-  #second {
-    color: blue;
-    font-size: 36px;
+  div.text {
+    color: rgb(0, 0, 0);
+    font-size: 22px;
+    font-weight: 100;
   }
 
-  .third {
-    font-size: 40px;
+  .small-para {
+    font-size: 14px;
+    font-weight: 800;
+    }
+
+  div .child {
+    color: rgb(0, 0, 0);
+    font-weight: 800;
+    font-size: 14px;
   }
-
-  #fourth {
-    background-color: lightgreen;
-    font-size: 24px;
-    font-weight: bold;
-  }
-
- .inverted {
-    background-color: black;
-    color: white;
-    
- }
-
- .not-inverted {
-    background-color: yellow;
- }
-
- .inverted, .not-inverted {
-    font-size: 28px;
-    font-family: Helvetica, "Times New Roman", sans-serif;
- }
-
- .avatar.proportioned {
-    width: 300px;
-    height: auto;
-}
-
-.avatar.distorted {
-    width: 200px;
-    height: 400px
-}
-
+  
